# db-chatbot-ai

./: .env  .replit  GOOGLE_ADS_SETUP.md  LOCAL_SETUP.md  MONETIZATION_GUIDE.md  ads.txt  app.py  data_handler.py  database_handler.py  privacy_policy.py  pyproject.toml  query_generator.py  replit.md  requirements.txt  requirements_local.txt  response_formatter.py  run_local.bat  run_local.sh  universal_data_handler.py
.streamlit/: config.toml
