[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.13.2",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
]
